--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
 			  {{#each burger_data}}
 			  	{{#unless this.devoured}}
 				<div class="col-md-9 text-center">
-					<pre>. {{this.burger_name}}
+					<pre> {{this.burger_name}}
 					</pre>
 				  		<!-- {{this.Date}} -->
 				</div>
